--- a/Metrics/ALBA/java/pom.xml
+++ b/Metrics/ALBA/java/pom.xml
@@ -7,14 +7,15 @@
     <artifactId>AttributeUsageCounter</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <dependencies>
-        <dependency>
-            <groupId>com.github.javaparser</groupId>
-            <artifactId>javaparser-symbol-solver-core</artifactId>
-            <version>3.23.0</version>
-        </dependency>
-    </dependencies>
+
     <build>
+<!--        <dependencies>-->
+<!--        <dependency>-->
+<!--            <groupId>com.github.javaparser</groupId>-->
+<!--            <artifactId>javaparser-symbol-solver-core</artifactId>-->
+<!--            <version>3.23.0</version>-->
+<!--        </dependency>-->
+<!--    </dependencies>-->
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
