--- a/METRIC_CALCULTOR_APP/CONSOLE_APP/pom.xml
+++ b/METRIC_CALCULTOR_APP/CONSOLE_APP/pom.xml
@@ -9,10 +9,22 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-nop</artifactId>
+            <version>1.7.32</version> <!-- Use the latest version -->
+        </dependency>
+
+        <dependency>
             <groupId>com.github.javaparser</groupId>
             <artifactId>javaparser-symbol-solver-core</artifactId>
             <version>3.23.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.jgit</groupId>
+            <artifactId>org.eclipse.jgit</artifactId>
+            <version>5.14.0.202012080955-r</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
