--- a/METRIC_CALCULTOR_APP/CONSOLE_APP/pom.xml
+++ b/METRIC_CALCULTOR_APP/CONSOLE_APP/pom.xml
@@ -19,11 +19,19 @@
             <artifactId>javaparser-symbol-solver-core</artifactId>
             <version>3.23.0</version>
         </dependency>
+
         <dependency>
             <groupId>org.eclipse.jgit</groupId>
             <artifactId>org.eclipse.jgit</artifactId>
             <version>5.14.0.202012080955-r</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.8</version>
+        </dependency>
+
 
     </dependencies>
     <build>
